--- a/index.html
+++ b/index.html
@@ -7,26 +7,37 @@
     <title>Chuck Norris Facts</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="styles/styles.css" />
+    <!--google icon to change background-->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <body>
-    <div class="background">
+    <!-- <div class="background">
       <img src="images/desert-background.jpg">
-    </div>
+    </div> -->
+
+    <!--change background icon-->
+    <a href="#" class="change-background">
+      <span class="material-symbols-outlined icon" id="change-background"
+        >nightlight</span
+      >
+    </a>
     <header>
-      <img src="images/martial-arts.png" class="header-icon"/>
-      <h1>Chuck Norris Facts</h2>
-      <img src="images/martial-arts.png" class="header-icon"/>
+      <img src="images/martial-arts.png" class="header-icon" />
+      <h1>Chuck Norris Facts</h1>
+      <img src="images/martial-arts.png" class="header-icon" />
     </header>
     <main>
       <div class="chuck-img-container">
-        <img src="images/chuck-norris-icon.png">
+        <img src="images/chuck-norris-icon.png" />
       </div>
 
-      <div class="quotes-box"></div>
+      <div class="quotes-box"><p id="quotes-text"></p></div>
 
       <div class="fact-btns-container">
         <div class="random-btn-container">
-          <button class="btn random-btn">RANDOM FACT</button>
+          <button class="btn random-btn" id="random-btn">RANDOM FACT</button>
         </div>
 
         <div class="generate-section">
@@ -49,20 +60,27 @@
 
           <button class="btn generate-btn">GENERATE</button>
 
-          <input type="text" class="btn" placeholder="Or input some text...">
+          <input type="text" class="btn" placeholder="Or input some text..." />
         </div>
-       
       </div>
     </main>
     <footer>
+      <p>Project made by Toucans Team 09</p>
       <p>
-        Project made by Toucans Team 09
+        Source code
+        <a href="https://github.com/chingu-voyages/v42-toucans-team-09"
+          >available here</a
+        >
       </p>
       <p>
-        Source code <a href="https://github.com/chingu-voyages/v42-toucans-team-09">available here</a>
+        Credit:
+        <a
+          href="https://www.freepik.com/free-vector/wild-desert-landscape-daytime-scene_11447175.htm"
+          >Image by brgfx</a
+        >
+        on Freepik
       </p>
-      <p>Credit: <a href="https://www.freepik.com/free-vector/wild-desert-landscape-daytime-scene_11447175.htm">Image by brgfx</a> on Freepik</p>
     </footer>
-
+    <script src="src/script.js"></script>
   </body>
 </html>
