small layout changes and responsiveness

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!--google icon to change background-->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
   <body>
     <!-- <div class="background">
@@ -18,15 +19,19 @@
     </div> -->
 
     <!--change background icon-->
-    <a href="#" class="change-background">
+    <!-- <a href="#" class="change-background">
       <span class="material-symbols-outlined icon" id="change-background"
         >nightlight</span
       >
-    </a>
+    </a> -->
     <header>
-      <img src="images/martial-arts.png" class="header-icon" />
       <h1>Chuck Norris Facts</h1>
-      <img src="images/martial-arts.png" class="header-icon" />
+      <!--change background icon-->
+      <a href="#" class="change-background">
+        <span class="material-symbols-outlined icon" id="change-background"
+          >nightlight</span
+        >
+      </a>
     </header>
     <main>
       <div class="chuck-img-container">
@@ -35,7 +40,7 @@
 
       <div class="quotes-box"><p id="quotes-text"></p></div>
 
-      <div class="fact-btns-container">
+      <div class="btns-container">
         <div class="random-btn-container">
           <button class="btn random-btn" id="random-btn">RANDOM FACT</button>
         </div>
