--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="generate-section">
           <select name="categories" class="btn" id="categories">
-            <option value="Any" selected>Any</option>
+            <option value="None" selected>-- Please chose a category --</option>
           </select>
 
           <button class="btn generate-btn">GENERATE</button>
