Feature: Display filtered joke by categories

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
         <div class="generate-section">
           <select name="categories" class="btn" id="categories">
-            <option value="None" selected>-- Please chose a category --</option>
+            <option value="None" selected>--Chose a category--</option>
           </select>
 
-          <button class="btn generate-btn">GENERATE</button>
+          <button class="btn generate-btn" id="generate-btn">GENERATE</button>
 
           <input type="text" class="btn" placeholder="Or input some text..." />
         </div>
