--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chuck Norris Facts</title>
+    <link rel="shortcut icon" type="image/png" href="images/chuck-norris-icon.png">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="styles/styles.css" />
     <!--google icon to change background-->
@@ -56,21 +57,10 @@
       </div>
     </main>
     <footer>
-      <p>Project made by Toucans Team 09</p>
-      <p>
-        Source code
+      <p>Project made by Toucans Team 09 | Source code
         <a href="https://github.com/chingu-voyages/v42-toucans-team-09"
           >available here</a
-        >
-      </p>
-      <p>
-        Credit:
-        <a
-          href="https://www.freepik.com/free-vector/wild-desert-landscape-daytime-scene_11447175.htm"
-          >Image by brgfx</a
-        >
-        on Freepik
-      </p>
+        ></p>
     </footer>
     <script src="src/script.js"></script>
   </body>
