created separate js files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chuck Norris Facts</title>
-    <link rel="shortcut icon" type="image/png" href="images/chuck-norris-icon.png">
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="images/chuck-norris-icon.png" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="styles/styles.css" />
     <!--google icon to change background-->
@@ -57,11 +60,13 @@
       </div>
     </main>
     <footer>
-      <p>Project made by Toucans Team 09 | Source code
+      <p>
+        Project made by Toucans Team 09 | Source code
         <a href="https://github.com/chingu-voyages/v42-toucans-team-09"
           >available here</a
-        ></p>
+        >
+      </p>
     </footer>
-    <script src="src/script.js"></script>
+    <script src="src/main.js" type="module"></script>
   </body>
 </html>
