please chose > please choose

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <form class="generate-section" id="form">
           <select name="categories" class="btn" id="categories">
-            <option value="none" selected>-- Please chose a category --</option>
+            <option value="none" selected>-- Please choose a category --</option>
           </select>
 
           <button class="btn generate-btn">GENERATE</button>
