add extra space, alt, and title size

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       >
     </a>
     <header>
-      <img src="images/martial-arts.png" class="header-icon" />
-      <h1>Chuck Norris Facts</h1>
-      <img src="images/martial-arts.png" class="header-icon" />
+      <img src="images/martial-arts.png" alt="" class="header-icon" />
+      <h1 class="title">Chuck Norris Facts</h1>
+      <img src="images/martial-arts.png" alt="" class="header-icon" />
     </header>
     <main>
       <div class="chuck-img-container">
-        <img src="images/chuck-norris-icon.png" />
+        <img src="images/chuck-norris-icon.png" alt="Chuck Norris" />
       </div>
 
       <div class="quotes-box"><p id="quotes-text"></p></div>
@@ -46,7 +46,7 @@
 
         <form class="generate-section" id="form">
           <select name="categories" class="btn" id="categories">
-            <option value="none" selected>-- Please choose a category --</option>
+            <option value="none" selected>Choose a category</option>
           </select>
 
           <button class="btn generate-btn">GENERATE</button>
