added small animation on quotes

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="images/chuck-norris-icon.png" />
+      href="images/chuck-norris-icon.png"
+    />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="styles/styles.css" />
     <!--google icon to change background-->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
   <body>
     <!-- <div class="background">
@@ -37,11 +39,13 @@
         <img src="images/chuck-norris-icon.png" alt="Chuck Norris" />
       </div>
 
-      <div class="quotes-box"><p id="quotes-text"></p></div>
+      <div class="quotes-box"><p id="quotes-text" class="slide-text"></p></div>
 
       <div class="fact-btns-container">
         <div class="random-btn-container">
-          <button class="btn random-btn" id="random-btn">RANDOM FACT</button>
+          <button class="btn random-btn animate" id="random-btn">
+            RANDOM FACT
+          </button>
         </div>
 
         <form class="generate-section" id="form">
@@ -49,13 +53,14 @@
             <option value="none" selected>Choose a category</option>
           </select>
 
-          <button class="btn generate-btn">GENERATE</button>
+          <button class="btn generate-btn animate">GENERATE</button>
 
           <input
             type="text"
             class="btn"
             id="form-input"
-            placeholder="Or input some text..." />
+            placeholder="Or input some text..."
+          />
         </form>
       </div>
     </main>
