--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="images/chuck-norris-icon.png"
-    />
+      href="images/chuck-norris-icon.png" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="styles/styles.css" />
     <!--google icon to change background-->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <body>
     <!-- <div class="background">
@@ -41,6 +39,10 @@
 
       <div class="quotes-box"><p id="quotes-text" class="slide-text"></p></div>
 
+      <p class="generated-facts-number">
+        Number of generated facts: <span id="generated-facts-number">0</span>
+      </p>
+
       <div class="fact-btns-container">
         <div class="random-btn-container">
           <button class="btn random-btn animate" id="random-btn">
@@ -59,8 +61,7 @@
             type="text"
             class="btn"
             id="form-input"
-            placeholder="Or input some text..."
-          />
+            placeholder="Or input some text..." />
         </form>
       </div>
     </main>
