--- a/quotes.html
+++ b/quotes.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/quotes.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Serious.ly</title>
 </head>
-<body class="light">
-    <header>
-        <h1>Serious.ly</h1>
-        <img src="./public/icons/icon-light.png" alt="light">
-    </header>
+<body>
+   
 </body>
 </html>
