--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="light">
+<html lang="en" class="light scroll-smooth">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +14,7 @@
       <a class="text-2xl md:text-4xl dark:text-white" href="#">Serious.ly</a>
       <div class="flex justify-between items-center">
         <nav class="sm:mr-9">
-          <a class="mr-8 text-xl border-b-transparent	md:hover:text-yellow-400 dark:text-white transition-all" href="#" >Team</a>
+          <a class="mr-8 text-xl border-b-transparent	md:hover:text-yellow-400 dark:text-white transition-all" href="#team" >Team</a>
           <a class="hidden sm:inline-block bg-yellow-300 md:hover:bg-yellow-400 px-3 py-3 rounded-md shadow-btn px-text-lg font-bold whitespace-nowrap transition-all" href="quotes.html">Generate now</a>
         </nav>
         <a href="#"> <img id="change-background" class="w-7" src="img/light-bg.png" alt="Switch to dark background color"></a>        
@@ -69,42 +69,42 @@
       
     </section>
 
-    <section class="container mx-auto px-2 pb-16 md:pb-24 text-center dark:text-white">
+    <section id="team" class="container mx-auto px-2 pb-16 md:pb-24 text-center dark:text-white">
       <h2 class="mb-8 text-4xl md:text-6xl font-bold">Meet Our Team</h2>
       <p class="mb-12 text-xl sm:text-2xl md:text-3xl">We’re working cross-borderly from 5 countries <br class="hidden md:inline"> using English as a secondary language</p>
 
       <ul class="flex flex-col justify-around items-center gap-10 md:flex-row md:flex-wrap md:gap-20 md:justify-center">
 
         <li class="flex flex-col items-center justify-between gap-2">
-          <div class="flex justify-center items-center w-48 h-48 rounded-full bg-black text-white text-xl dark:bg-white dark:text-black">
+          <div class="flex justify-center items-center mb-2 w-48 h-48 rounded-full bg-black text-white text-xl dark:bg-white dark:text-black">
             Yana</div>
           <p class="text-xl">Front-End Engineer</p>
           <img src="img/flags/ukraine.png" alt="Flag of Ukraine">
       </li>
 
       <li class="flex flex-col items-center justify-between gap-1.5">
-        <div class="flex justify-center items-center w-48 h-48 rounded-full bg-black text-white text-xl dark:bg-white dark:text-black">
+        <div class="flex justify-center items-center mb-2 w-48 h-48 rounded-full bg-black text-white text-xl dark:bg-white dark:text-black">
           Andrei</div>
         <p class="text-xl">Front-End Engineer</p>
         <img src="img/flags/romania.png" alt="Flag of Romania">
     </li>
 
     <li class="flex flex-col items-center justify-between gap-1.5">
-      <div class="flex justify-center items-center w-48 h-48 rounded-full bg-black text-white text-xl dark:bg-white dark:text-black">
+      <div class="flex justify-center items-center mb-2 w-48 h-48 rounded-full bg-black text-white text-xl dark:bg-white dark:text-black">
         Taufiq</div>
       <p class="text-xl">Product Owner</p>
       <img src="img/flags/indonesia.png" alt="Flag of Indonesia">
     </li>
 
     <li class="flex flex-col items-center justify-between gap-1.5">
-          <div class="flex justify-center items-center w-48 h-48 rounded-full bg-black text-white text-xl dark:bg-white dark:text-black">
+          <div class="flex justify-center items-center mb-2 w-48 h-48 rounded-full bg-black text-white text-xl dark:bg-white dark:text-black">
             Toki</div>
           <p class="text-xl">Front-End Engineer</p>
           <img src="img/flags/madagascar.png" alt="Flag of Madagascar">
     </li>
 
     <li class="flex flex-col items-center justify-between gap-1.5">
-        <div class="flex justify-center items-center w-48 h-48 rounded-full bg-black text-white text-xl dark:bg-white dark:text-black">
+        <div class="flex justify-center items-center mb-2 w-48 h-48 rounded-full bg-black text-white text-xl dark:bg-white dark:text-black">
           Noman</div>
         <p class="text-xl">Front-End Engineer</p>
         <img src="img/flags/pakistan.png" alt="Flag of Pakistan">
