--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     </section>
 
     <section class="container mx-auto pb-14 text-center md:text-2xl">
-      <img class="max-w-full" src="img/app.png" alt="">
+      <img class="max-w-full" src="img/app.png" alt="Quotes generator page">
       <p class="font-bold dark:text-white">Responsive on any device</p>
       <p class="dark:text-white">Access from anywhere</p>
     </section>
  
-    <section class="container mx-auto pt-28 pb-28 md:pt-60 md:pb-56 text-center dark:text-white">
+    <section class="container mx-auto pt-28 pb-28 md:pt-56 md:pb-56 text-center dark:text-white">
 
       <div class="px-2">
         <h2 class="mb-7 text-2xl sm:text-4xl md:text-5xl lg:text-7xl font-bold">Taking Life Too Serious? <br> Try Serious.ly</h2>
@@ -69,7 +69,7 @@
       
     </section>
 
-    <section id="team" class="container mx-auto px-2 pb-16 md:pb-24 text-center dark:text-white">
+    <section id="team" class="container mx-auto px-2 pb-16 md:pb-28 text-center dark:text-white">
       <h2 class="mb-8 text-4xl md:text-6xl font-bold">Meet Our Team</h2>
       <p class="mb-12 text-xl sm:text-2xl md:text-3xl">We’re working cross-borderly from 5 countries <br class="hidden md:inline"> using English as a secondary language</p>
 
