--- a/quotes.html
+++ b/quotes.html
@@ -81,20 +81,9 @@
         Quotes History
       </p>
       <div
+        id="quote-history"
         class="bg-gray-100 flex flex-col text-center mx-6 mb-6 sm:mx-10 sm:mb-10 md:mx-14 md:mb-14 lg:mx-16 lg:mb-16"
       >
-        <p class="m-6">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-          pariatur in eum ad accusamus vitae!
-        </p>
-        <p class="m-6">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-          pariatur in eum ad accusamus vitae!
-        </p>
-        <p class="m-6">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-          pariatur in eum ad accusamus vitae!
-        </p>
       </div>
     </div>
     <script src="src/tools/changeBackground.js"></script>
