--- a/quotes.html
+++ b/quotes.html
@@ -82,7 +82,7 @@
         Quotes History
       </p>
       <div
-        id="quote-history"
+        id="quotes-history"
         class="bg-gray-100 flex flex-col text-center mx-6 mb-6 sm:mx-10 sm:mb-10 md:mx-14 md:mb-14 lg:mx-16 lg:mb-16"
       >
       </div>
