--- a/quotes.html
+++ b/quotes.html
@@ -24,17 +24,12 @@
 
     <!-- QUOTES CONTAINER -->
     <div
-      class="w-screen h-96 flex justify-center align-center bg-black dark:bg-white shadow-btn rounded-2xl"
-    >
+      class="w-screen h-96 flex justify-center align-center bg-black dark:bg-white shadow-btn rounded-2xl">
       <div
-        class="w-full text-center flex bg-white dark:bg-black m-4 rounded-2xl"
-      >
+        class="w-full text-center flex bg-white dark:bg-black m-4 rounded-2xl">
         <p
           id="quotes-text"
-          class="px-6 md:px-10 lg:max-w-4xl sm:text-lg md:text-xl lg:text-2xl mx-auto self-center dark:text-white"
-        >
-          
-        </p>
+          class="px-6 md:px-10 lg:max-w-4xl sm:text-lg md:text-xl lg:text-2xl break-all mx-auto self-center dark:text-white"></p>
       </div>
     </div>
 
@@ -45,8 +40,7 @@
     <div class="flex justify-center">
       <button
         id="random-btn"
-        class="bg-black text-white p-4 rounded-xl dark:bg-white dark:text-black shadow-btn relative"
-      >
+        class="bg-black text-white p-4 rounded-xl dark:bg-white dark:text-black shadow-btn relative">
         <span class="absolute left-5 top-3 lg:top-3.5">👉</span>
         <p class="px-6 pl-8 font-semibold lg:text-lg">Generate Random</p>
       </button>
@@ -54,27 +48,22 @@
 
     <form
       id="form"
-      class="flex flex-col py-8 md:grid md:grid-cols-6 md:gap-x-4 md:px-8 lg:px-12 max-w-6xl mx-auto"
-    >
+      class="flex flex-col py-8 md:grid md:grid-cols-6 md:gap-x-4 md:px-8 lg:px-12 max-w-6xl mx-auto">
       <input
         id="form-input"
         class="p-2 w-64 mx-auto border-2 border-stone-400 md:col-span-3 md:w-full md:my-4 placeholder:text-center rounded-lg"
-        placeholder="🔎 Search Quotes"
-      />
+        placeholder="🔎 Search Quotes" />
       <button
-        class="my-4 p-2 w-56 mx-auto border-2 dark:border-white dark:text-white border-stone-600 md:col-span-1 md:w-full rounded-lg"
-      >
+        class="my-4 p-2 w-56 mx-auto border-2 dark:border-white dark:text-white border-stone-600 md:col-span-1 md:w-full rounded-lg">
         <p class="generate-btn text-lg font-semibold">Generate</p>
         <p class="text-xs">Search/Category</p>
       </button>
       <select
         id="categories"
-        class="p-2 w-72 mx-auto border-2 border-stone-400 md:col-span-2 md:w-full md:my-4 rounded-lg bg-gray-100 appearance-none"
-      >
+        class="p-2 w-72 mx-auto border-2 border-stone-400 md:col-span-2 md:w-full md:my-4 rounded-lg bg-gray-100 appearance-none">
         <option class="text-center">🔻 Choose Category</option>
       </select>
-    </form
-      id="form">
+    </form>
 
     <!-- QUOTES HISTORY SECTION -->
     <div class="">
@@ -82,8 +71,7 @@
         Quotes History
       </p>
       <div
-        class="bg-gray-100 flex flex-col text-center mx-6 mb-6 sm:mx-10 sm:mb-10 md:mx-14 md:mb-14 lg:mx-16 lg:mb-16"
-      >
+        class="bg-gray-100 flex flex-col text-center mx-6 mb-6 sm:mx-10 sm:mb-10 md:mx-14 md:mb-14 lg:mx-16 lg:mb-16">
         <p class="m-6">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
           pariatur in eum ad accusamus vitae!
