--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </ul>
 
         <a
-          class="bg-yellow-300 md:hover:bg-yellow-400 px-3 py-3 rounded-md shadow-btn px-text-lg font-bold dark:text-black whitespace-nowrap transition-all"
+          class="inline-block bg-yellow-300 md:hover:bg-yellow-400 px-3 py-3 rounded-md shadow-btn px-text-lg font-bold dark:text-black whitespace-nowrap transition-all"
           href="quotes.html"
           >Generate now</a
         >
