change first screen message

--- a/quotes.html
+++ b/quotes.html
@@ -71,12 +71,8 @@
         Quotes History
       </p>
       <div
-      
         id="quotes-history"
-        class="bg-gray-100 flex flex-col text-center mx-6 mb-6 sm:mx-10 sm:mb-10 md:mx-14 md:mb-14 lg:mx-16 lg:mb-16"
-      >
-
-      </div>
+        class="bg-gray-100 flex flex-col text-center mx-6 mb-6 sm:mx-10 sm:mb-10 md:mx-14 md:mb-14 lg:mx-16 lg:mb-16"></div>
     </div>
 
     <script src="src/main.js" type="module"></script>
