--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     <footer class="bg-white">
       <div class="container mx-auto px-2 py-4 text-center">
         <p class="text-xs sm:text-base md:text-xl lg:text-2xl text-gray-500">
-          Created by Toucans 9 (Voyages 42) | GitHub Repo 👉
+          Created by Toucans 9 (Voyage 42) | GitHub Repo 👉
           <a
             href="https://github.com/chingu-voyages/v42-toucans-team-09/tree/main"
             >Link</a
