quotes history style css

--- a/quotes.html
+++ b/quotes.html
@@ -77,7 +77,7 @@
       <div
         class="bg-gray-100 flex items-center px-1 sm:pl-2 sm:pr-4 py-6 md:py-10 md:px-14 sm:mx-10 sm:mb-10 md:mx-14 md:mb-14 lg:mx-16 lg:mb-16">
         <ul
-          class="grid grid-rows-150 grid-cols-[30px] sm:grid-cols-[50px] md:grid-cols-[100px] place-items-center">
+          class="grid grid-rows-180 sm:grid-rows-150 grid-cols-[50px] md:grid-cols-[100px] place-items-center">
           <li class="">
             <img class="w-30" src="img/quotes-history/sign.png" alt="" />
           </li>
@@ -95,7 +95,7 @@
           </li>
         </ul>
         <div
-          class="grid grid-rows-150 w-full place-items-center"
+          class="grid grid-rows-180 sm:grid-rows-150 w-full place-items-center"
           id="quotes-history"></div>
       </div>
     </div>
