--- a/quotes.html
+++ b/quotes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <link rel="stylesheet" href="style/style.css" />
     <title>Serious.ly</title>
     <link rel="icon" type="image/x-icon" href="img/light-bg.png" />
@@ -30,7 +31,7 @@
         class="w-full text-center flex bg-white dark:bg-black m-4 rounded-2xl">
         <p
           id="quotes-text"
-          class="px-6 md:px-10 lg:max-w-4xl sm:text-lg md:text-xl lg:text-2xl break-all mx-auto self-center dark:text-white"></p>
+          class="px-6 md:px-10 lg:max-w-4xl sm:text-lg md:text-xl lg:text-2xl break-words mx-auto self-center dark:text-white"></p>
       </div>
     </div>
 
@@ -75,29 +76,8 @@
         Quotes History
       </p>
       <div
-        class="bg-gray-100 flex items-center px-1 sm:pl-2 sm:pr-4 py-6 md:py-10 md:px-14 sm:mx-10 sm:mb-10 md:mx-14 md:mb-14 lg:mx-16 lg:mb-16">
-        <ul
-          class="grid grid-rows-180 sm:grid-rows-150 grid-cols-[50px] md:grid-cols-[100px] place-items-center">
-          <li class="">
-            <img class="w-30" src="img/quotes-history/sign.png" alt="" />
-          </li>
-          <li>
-            <img class="w-30" src="img/quotes-history/sign.png" alt="" />
-          </li>
-          <li>
-            <img class="w-30" src="img/quotes-history/sign.png" alt="" />
-          </li>
-          <li>
-            <img class="w-30" src="img/quotes-history/sign.png" alt="" />
-          </li>
-          <li>
-            <img class="w-30" src="img/quotes-history/sign.png" alt="" />
-          </li>
-        </ul>
-        <div
-          class="grid grid-rows-180 sm:grid-rows-150 w-full place-items-center"
-          id="quotes-history"></div>
-      </div>
+        class="bg-gray-100 flex flex-col justify-around items-center lg:items-start gap-y-16 px-3 py-6 md:py-10 md:px-10 lg:pl-40 xl:pr-24 sm:mx-10 sm:mb-10 md:mx-14 md:mb-14 lg:mx-16 lg:mb-16"
+        id="quotes-history"></div>
     </div>
     <script src="src/main.js" type="module"></script>
   </body>
