change width of quiot container

--- a/quotes.html
+++ b/quotes.html
@@ -25,7 +25,7 @@
 
     <!-- QUOTES CONTAINER -->
     <div
-      class="w-screen h-96 flex justify-center align-center bg-black dark:bg-white shadow-btn rounded-2xl">
+      class="w-full h-96 flex justify-center align-center bg-black dark:bg-white shadow-btn rounded-2xl">
       <div
         class="w-full text-center flex bg-white dark:bg-black m-4 rounded-2xl">
         <p
