--- a/quotes.html
+++ b/quotes.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style/style.css" />
     <title>Serious.ly</title>
     <link rel="icon" type="image/x-icon" href="img/light-bg.png" />
+    <script src="https://unpkg.com/@dotlottie/player-component@1.0.0/dist/dotlottie-player.js"></script>
   </head>
   <body class="dark:bg-black">
     <!-- NAVBAR -->
@@ -25,7 +26,7 @@
 
     <!-- QUOTES CONTAINER -->
     <div
-      class="w-full h-96 flex justify-center align-center bg-black dark:bg-white shadow-btn rounded-2xl">
+      class="w-full h-96 flex justify-center align-center bg-black dark:bg-white shadow-btn rounded-2xl relative">
       <div
         class="w-full text-center flex bg-white dark:bg-black m-4 rounded-2xl">
         <p
